js framework update

--- a/projects/LCDControl.html
+++ b/projects/LCDControl.html
@@ -56,7 +56,7 @@
 	            <!--</form>-->
 	            
 	            <input id="message" size="16"/>
-		        <input type="button" value="Send Message" onclick="sendData()" /> 
+		        <input id="submit" type="button" value="Send Message" onclick="sendData()" /> 
 	</body>
 	
 	
