js framework update

--- a/projects/LCDControl.html
+++ b/projects/LCDControl.html
@@ -49,7 +49,7 @@
 	<body>
 	    <h3>Print Message on LCD</h3>
 	        <input id="message" size="16"/>
-		    <input id="submit" type="button" value="Send Message" onclick="sendData()" onkeyup="inputKeyUp(event)"/> 
+		    <input id="submit" type="button" value="Send Message" onclick="sendData()" onkeypress="inputKeyUp(event)"/> 
 	</body>
 	
 	
