--- a/projects/LCDControl.html
+++ b/projects/LCDControl.html
@@ -49,7 +49,8 @@
 	<body>
 	    <h3>Print Message on LCD</h3>
 	        <input id="message" size="16"/>
-		    <input type="button" value="Send Message" onclick="sendData()"/> 
+		    <!--<input type="button" value="Send Message" onclick="sendData()"/> -->
+		    <input type="submit" value="Send Message" onclick="sendData()"/> 
 	</body>
 	
 	
