--- a/projects/LCDControl.html
+++ b/projects/LCDControl.html
@@ -50,7 +50,7 @@
 	    <h3>Print Message on LCD</h3>
 	        <input id="message" size="16"/>
 		    <!--<input type="button" value="Send Message" onclick="sendData()"/> -->
-		    <input type="submit" value="Send Message" onclick="sendData()"/> 
+		    <input type="button" value="Send Message" onclick="sendData()"/> 
 	</body>
 	
 	
