--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	    <h2>IoT Projects</h2>
 	        <ul>
 	            <li><a href="/iot/projects/LCDControl">LCD Display Message Print</a></li>
-	            <li><a href="/iot/projects/led">LED Toggles</a></li>
+	            <li><a href="/iot/projects/led">LED Toggle</a></li>
 	        </ul>
 	    
 	</body>
