update Motion Alarm app

--- a/projects/MotionAlarm.html
+++ b/projects/MotionAlarm.html
@@ -46,8 +46,8 @@
 	
 	<body>
 	    <h2>Alarm Status:</h2>
-	    <input type="radio" id="arm" value="arm" onclick="toggleArm()"/> Arm System
-	    <input type="radio" id="disarm" value="disarm" onclick="toggleDisarm()"/> Disarm System
+	    <input type="radio" name="arm" value="arm" onclick="toggleArm()"/> Arm System
+	    <input type="radio" name="arm" value="disarm" onclick="toggleDisarm()"/> Disarm System
 	</body>
 	
 	
