--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	        <ul>
 	            <li><a href="/iot/projects/LCDControl">LCD Display Message Print</a></li>
 	            <li><a href="/iot/projects/led">LED Toggle</a></li>
+	            <li><a href="/iot/projects/MotionAlarm">Motion Alarm System</a></li>
 	        </ul>
 	    
 	</body>
