--- a/projects/MotionAlarm.html
+++ b/projects/MotionAlarm.html
@@ -44,7 +44,7 @@
         
     </head>
 	
-	<body onload="statusRetriever()">
+	<body>
 	    <h2>Alarm Status:</h2>
 	    <input type="radio" name="arm" value="arm" onclick="toggleArm()"/> Arm System
 	    <input type="radio" name="arm" value="disarm" onclick="toggleDisarm()"/> Disarm System
