update MotionSensor app with js update

--- a/projects/MotionAlarm.html
+++ b/projects/MotionAlarm.html
@@ -49,7 +49,7 @@
 	    <input type="radio" name="arm" value="arm" onclick="toggleArm()"/> Arm System
 	    <input type="radio" name="arm" value="disarm" onclick="toggleDisarm()"/> Disarm System
 	    
-	    <p>System Status: </p><span style="font-weight:bold" id="status"></span>
+	    <p>System Status: </p><span style="font-weight:bold" id="AlarmStatus"></span>
 	</body>
 	
 	
