--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	            <li><a href="/iot/projects/LCDControl">LCD Display Message Print</a></li>
 	            <li><a href="/iot/projects/led">LED Toggle</a></li>
 	            <li><a href="/iot/projects/MotionAlarm">Motion Alarm System</a></li>
+	            <li><a href="/iot/projects/morseflasher">Morse Code Sender</a></li>
 	        </ul>
 	    
 	</body>
