--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	            <li><a href="/iot/projects/led">LED Toggle</a></li>
 	            <li><a href="/iot/projects/MotionAlarm">Motion Alarm System</a></li>
 	            <li><a href="/iot/projects/morseflasher">Morse Code Sender</a></li>
+	            <li><a href="/iot/projects/humidifier">Humidity Control</a></li>
 	        </ul>
 	    
 	</body>
