--- a/projects/humidifier.html
+++ b/projects/humidifier.html
@@ -54,7 +54,7 @@
 	    
 	    <p style="font-weight:bold">Current Status: </p><span id="CurrentStatus"></span>
 	    
-	    <b>Humidity Run Point for Humidifier: </b>
+	    <p style="font-weight:bold">Humidity Run Point for Humidifier: </p>
 	    <input id="RunPointValue" size="8"/>
 	    <input type="button" value="Send" onclick="sendRunPoint()" />
 	    <p style="font-weight:bold">Current Run Point: </p><span id="SetRunPoint"></span>
