change div id to prevent interference with span id

--- a/projects/humidifier.html
+++ b/projects/humidifier.html
@@ -54,7 +54,7 @@
         	    <input type="radio" name="status" value="off" onclick="toggleOff()"/> Off
         	</div>
 	    
-    	    <div id="CurrentStatus">
+    	    <div id="PresentStatus">
     	        <p style="font-weight:bold">Current Status: </p><span id="CurrentStatus"></span>
     	    </div>
     	    
